# audearch

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENCE  Pipfile  README.md  audearch-config.ini  audearch-config.toml  config.ini  config.ini.template  constraints.txt  mypy.ini  setup.cfg
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: codeql-analysis.yml  python-app.yml
audearch/: analyzer-librosa.py  analyzer.py  database.py  register.py  search.py
auderch/: analyzer.py  database.py  register.py  search.py
tests/: conftest.py  test_analyzer.py  test_database.py  test_register.py  test_search.py
web/: controllers.py  run.py  urls.py
web/templates/: index.html  layout.html  upload.html
