[metadata]
name = audearch
version = 0.2.2
author = Jumpei Funayama
author_email = contact.zouri.music@gmail.com
description = audearch is a simple music search system
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/audearch/audearch
licence = file: LICENCE
python_requires = >=3.6
classifiers = 
  Development Status :: 4 - Beta
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
    numpy
    scipy
    pymongo
    configparser